--- a/PersonalSite/Pages/Resume/ExperienceList.razor
+++ b/PersonalSite/Pages/Resume/ExperienceList.razor
@@ -16,7 +16,7 @@
 
     <div class="flex-grow-1">
         <div class="mb-4">
-            <h2>@experience.Title</h2>
+            <h3 class="mt-3">@experience.Title</h3>
 
             <ExperienceView Model="@Foo(experience, false)" />
         </div>
@@ -35,7 +35,7 @@
     </div>
 
     <div class="flex-grow-1">
-        <h2>@firstExperience.Company</h2>
+        <h3 class="mt-3">@firstExperience.Company</h3>
 
         <p class="text-muted meta mb-5">
             @firstExperience.GetStartDate().Humanize2(lastExperience.GetEndDate())</p>
