--- a/PersonalSite/Pages/Portfolio/PortfolioPage.razor
+++ b/PersonalSite/Pages/Portfolio/PortfolioPage.razor
@@ -12,6 +12,7 @@
 }
 else 
 {
+<article>
 
     <div class="mt-4">
         <p>Here are some of my projects - most of them are open source. You can find more of my projects on my <a href="https://github.com/marinasundstrom">GitHub page</a>, and more videos in this <a href="https://youtube.com/playlist?list=PLLBU--06ftFqPiAwkg3VKa2fIEhNu7J4L">playlist</a> on YouTube.</p>
@@ -130,6 +131,7 @@ else
         }
 
     </div>
+    </article>
 }
 
 @code {
