--- a/PersonalSite/Pages/Resume/ResumePage.razor
+++ b/PersonalSite/Pages/Resume/ResumePage.razor
@@ -9,11 +9,11 @@
 <PageTitle>Résumé - Marina Sundström</PageTitle>
 
 <div class="row">
-    <div class="sections col-xxl-10">
+    <article class="sections col-xxl-10">
 
         <h1>Résumé</h1>
 
-        <section class="blog text-content pt-1 pe-4 mb-5">
+        <section class="text-content pt-1 pe-4 mb-5">
 
             <h2 id="objective" class="mb-2 mt-4">Objective</h2>
 
@@ -162,7 +162,7 @@
 
         </section>
 
-    </div>
+    </article>
 
    @*
     <div class="col-md-2 right-border">
