--- a/PersonalSite/Pages/TagPage.razor
+++ b/PersonalSite/Pages/TagPage.razor
@@ -19,7 +19,7 @@
 
             @foreach (var post in posts)
             {
-               <article class="blog pt-2 mb-5">
+               <article class="pt-2 mb-5">
 
                     <PostHeader Title="@post.Title" Slug="@post.Slug" Subtitle="@post.Subtitle" Author="@post.Author" Published="@post.Published"
                         Tags="@post.Tags" EstimatedTime="@post.EstimatedReadTime" ShowEstimatedTime="true"
