--- a/PersonalSite/Pages/Portfolio/PortfolioPage.razor.css
+++ b/PersonalSite/Pages/Portfolio/PortfolioPage.razor.css
@@ -5,7 +5,8 @@
 
     .grid-dl dd {
         margin: 0;
-        padding: 0.5em 0 0.5em 0;
+        padding: 0 0 0.5em 0;
+
     }
 
     @@media (min-width: 550px) {
