--- a/PersonalSite/Pages/Resume/ExperienceList.razor.css
+++ b/PersonalSite/Pages/Resume/ExperienceList.razor.css
@@ -15,6 +15,7 @@ ol.timeline:before {
     height: 100%;
     z-index: 400;
 }
+
 ol.timeline > li {
     margin: 20px 0;
     padding-left: 20px;
@@ -46,5 +47,16 @@ ol.timeline > li:before {
     ol.timeline > li {
         margin: 20px 0;
         padding-left: 0;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+
+    ol.timeline:before {
+        background: #696969;
+    }
+
+    ol.timeline > li:before {
+        border: 3px solid #6f42c1;
     }
 }
