--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -10,7 +10,7 @@
     <div class="navbar-collapse offcanvas-collapse bg-purple @(isOpen ? "open" : null)" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <NavLink Match="NavLinkMatch.All" class="nav-link" href="">About <span class="sr-only">(current)</span>
+                <NavLink class="nav-link" href="about">About <span class="sr-only">(current)</span>
                 </NavLink>
             </li>
             <li class="nav-item">
