--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-purple px-3">
+    <div class="container">
     <a class="navbar-brand mr-auto mr-lg-0" href="#">
         <img src="/images/profile.jpeg" alt="Profile Image" class="rounded-circle profile"
             style="margin-right: 10px; height: 32px;" />
@@ -48,6 +49,7 @@
                 </a>
             </li>
         </ol>
+    </div>
     </div>
 </nav>
 
