--- a/PersonalSite/Pages/Resume/EducationView.razor
+++ b/PersonalSite/Pages/Resume/EducationView.razor
@@ -19,8 +19,10 @@
 
         @if(ShowMore) 
         {
-            <MarkdownView Content="@education.Description" />
-
+            <div class="mb-4">
+                <MarkdownView Content="@education.Description" />
+            </div>
+            
             if(education.Activities?.Any() ?? false)
             {
                 <dl class="mt-4">
@@ -47,9 +49,11 @@
             }
             var content = breakIndex == -1 ? education.Description : education.Description.Substring(0, breakIndex + 1);
 
-            <MarkdownView Content="@content" />
+            <div class="mb-4">
+                <MarkdownView Content="@content" />
+            </div>
             
-            <small><a href="#" @onclick="ToggleShowMore" @onclick:preventDefault><i class="fa fa-chevron-down me-1"></i> Show more</a></small>
+            <small><a href="#" @onclick="ToggleShowMore" @onclick:preventDefault><i class="fa fa-chevron-down me-1"></i> Show more</a></small>   
         }
     </div>
 
