--- a/PersonalSite/Pages/Resume/ExperienceList.razor
+++ b/PersonalSite/Pages/Resume/ExperienceList.razor
@@ -9,19 +9,19 @@
         var experience = experiences.First();
 
         <div class="d-flex" style="page-break-inside: avoid;">
-    <div class="col-logo">
-        <Logo Src="@experience.CompanyLogo" Alt="@($"{experience.Company} logo")" Class="me-4"
-            Href="@experience.Link" />
-    </div>
+            <div class="col-logo">
+                <Logo Src="@experience.CompanyLogo" Alt="@($"{experience.Company} logo")" Class="me-4"
+                    Href="@experience.Link" />
+            </div>
 
-    <div class="flex-grow-1">
-        <div class="mb-4">
-            <h3 class="mt-3">@experience.Title</h3>
+            <div class="flex-grow-1">
+                <div class="mb-4">
+                    <h3 class="mt-3">@experience.Title</h3>
 
-            <ExperienceView Model="@Foo(experience, false)" />
+                    <ExperienceView Model="@Foo(experience, false)" />
+                </div>
+            </div>
         </div>
-    </div>
-</div>
     }
     else
     {
@@ -29,25 +29,25 @@
         var firstExperience = experiences.Last();
 
         <div class="d-flex" style="page-break-inside: avoid;">
-    <div class="col-logo">
-        <Logo Src="@firstExperience.CompanyLogo" Alt="@($"{firstExperience.Company} logo")" Class="me-4"
-            Href="@firstExperience.Link" />
-    </div>
+            <div class="col-logo">
+                <Logo Src="@firstExperience.CompanyLogo" Alt="@($"{firstExperience.Company} logo")" Class="me-4"
+                    Href="@firstExperience.Link" />
+            </div>
 
-    <div class="flex-grow-1">
-        <h3 class="mt-3">@firstExperience.Company</h3>
+            <div class="flex-grow-1">
+                <h3 class="mt-3">@firstExperience.Company</h3>
 
-        <p class="text-muted meta mb-5">
-            @firstExperience.GetStartDate().Humanize2(lastExperience.GetEndDate())</p>
+                <p class="text-muted meta mb-5">
+                    @firstExperience.GetStartDate().Humanize2(lastExperience.GetEndDate())</p>
 
-        <ol class="timeline mt-5">
-            @foreach (var experience in experiences
+                <ol class="timeline mt-5">
+                    @foreach (var experience in experiences
                    .OrderByDescending(x => x.StartDate)
                    .ThenByDescending(x => x.EndDate))
                     {
                         <li>
                             <div class="mb-5 pt-1">
-                                <h3>@experience.Title</h3>
+                                <h4 style="margin-top: -6px !important;">@experience.Title</h4>
 
                                 <ExperienceView Model="@Foo(experience, true)" />
                             </div>
