--- a/PersonalSite/Pages/Resume/ExperienceView.razor
+++ b/PersonalSite/Pages/Resume/ExperienceView.razor
@@ -23,8 +23,10 @@ else
 
 @if(ShowMore) 
 {
-    <MarkdownView Content="@experience.Description" />
-
+    <div class="mb-4">
+        <MarkdownView Content="@experience.Description" />
+    </div>
+    
     @if(experience.Skills?.Any() ?? false)
     {
         <dl class="mt-4">
@@ -44,7 +46,9 @@ else
    }
    var content = breakIndex == -1 ? experience.Description : experience.Description.Substring(0, breakIndex + 1);
 
-   <MarkdownView Content="@content" />
+    <div class="mb-4">
+        <MarkdownView Content="@content" />
+   </div>
 
     <small><a href="#" @onclick="ToggleShowMore" @onclick:preventDefault><i class="fa fa-chevron-down me-1"></i> Show more</a></small>
 }
