--- a/PersonalSite/Pages/Resume/ResumePage.razor
+++ b/PersonalSite/Pages/Resume/ResumePage.razor
@@ -9,7 +9,7 @@
 <PageTitle>Résumé - Marina Sundström</PageTitle>
 
 <div class="row">
-    <article class="sections col-xxl-10">
+    <article class="sections inner">
 
         <h1>Résumé</h1>
 
