--- a/PersonalSite/Pages/Resume/EducationView.razor
+++ b/PersonalSite/Pages/Resume/EducationView.razor
@@ -11,7 +11,7 @@
 }
 
 <div class="mb-4" style="page-break-inside: avoid;">
-        <h3>@education.School</h3>
+        <h3 style="margin-top: 21px !important;">@education.School</h3>
 
         <p>@education.FieldOfStudy</p>
 
