--- a/PersonalSite/Pages/PostPage.razor
+++ b/PersonalSite/Pages/PostPage.razor
@@ -39,7 +39,7 @@ else
 
                 @if(post.Image is not null) 
                 {
-                    <img src="@post.Image" class="my-2" style="max-height: 280px;width: 100%;object-fit: cover;" />
+                    <img src="@post.Image"  class="cover my-2" style="max-height: 280px;width: 100%;object-fit: cover;" />
                 }
 
             </div>
