--- a/PersonalSite/Pages/Resume/ResumePage.razor.css
+++ b/PersonalSite/Pages/Resume/ResumePage.razor.css
@@ -9,7 +9,7 @@
     padding: 0 0 0.5em 0;
 }
 
-@@media (min-width: 550px) {
+@media (min-width: 550px) {
     .grid-dl {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -46,6 +46,5 @@
     margin-bottom: 5px;
     display: inline-block;
     background-color: #007bff;
-    ;
     vertical-align: middle;
 }
