--- a/PersonalSite/Pages/Resume/ExperienceView.razor
+++ b/PersonalSite/Pages/Resume/ExperienceView.razor
@@ -31,7 +31,7 @@ else
     {
         <dl class="mt-4">
             <dt>Skills</dt>
-            <dd>@string.Join(", ", experience.Skills)</dd>
+            <dd><small>@string.Join(" · ", experience.Skills)</small></dd>
         </dl>
     }
 
