--- a/PersonalSite/Pages/Resume/ResumePage.razor
+++ b/PersonalSite/Pages/Resume/ResumePage.razor
@@ -51,7 +51,7 @@
         </section>
 
         <section>
-            <h2 id="experience" class="pb-2 mt-4">Experience</h2>
+            <h2 id="experience" class="pb-2 pt-3 mt-4">Experience</h2>
 
             @if (resume is null)
             {
