--- a/PersonalSite/Pages/Resume/EducationView.razor
+++ b/PersonalSite/Pages/Resume/EducationView.razor
@@ -27,7 +27,7 @@
             {
                 <dl class="mt-4">
                     <dt>Activities</dt>
-                    <dd>@string.Join(", ", education.Activities)</dd>
+                    <dd><small>@string.Join(" · ", education.Activities)</small></dd>
                 </dl>
             }
 
@@ -35,7 +35,7 @@
             {
                 <dl class="mt-4">
                     <dt>Courses</dt>
-                    <dd>@string.Join(", ", education.Courses)</dd>
+                    <dd><small>@string.Join(" · ", education.Courses)</small></dd>
                 </dl>
             }
             <small><a href="#" @onclick="ToggleShowMore" @onclick:preventDefault><i class="fa fa-chevron-up me-1"></i> Show less</a></small>
