--- a/PersonalSite/Pages/Resume/ResumePage.razor.css
+++ b/PersonalSite/Pages/Resume/ResumePage.razor.css
@@ -9,6 +9,20 @@
     padding: 0 0 0.5em 0;
 }
 
+
+dl.skills dt {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    margin: 0;
+    padding: 0.5em 0 0.5em 0;
+    font-weight: 600;
+}
+
+dl.skills dd {
+    margin: 0;
+    padding: 0.5em 0 0.5em 0;
+}
+
+
 @media (min-width: 550px) {
     .grid-dl {
         display: grid;
